# mathly-backend

./: .env  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  extensions.py  swagger.py
app/config/: __init__.py  api.py  cors.py  database.py
app/extensions/: __init__.py  database.py  firebase.py
app/models/: __init__.py  user.py
app/routes/: __init__.py
app/routes/protected/: __init__.py  user.py
app/routes/public/: __init__.py  health.py
app/schemas/: __init__.py  user.py
app/services/: auth.py
app/utils/: json.py  terminal.py
migrations/versions/: 43e2a3f31be2_rename_user_table_to_users.py  7c5241ce01fe_initial_migration.py
